--- a/src/css/ng/angular-material.css
+++ b/src/css/ng/angular-material.css
@@ -13964,7 +13964,7 @@ md-toolbar {
       display: none; }
 
 .md-toolbar-tools {
-  font-size: 20px;
+  font-size: 1.5rem;
   letter-spacing: 0.005em;
   box-sizing: border-box;
   font-weight: 400;
@@ -13986,7 +13986,7 @@ md-toolbar {
     font-size: inherit;
     font-weight: inherit;
     margin: inherit; }
-  .md-toolbar-tools a {
+  .md-toolbar-tools a, .md-toolbar-tools a:hover {
     color: inherit;
     text-decoration: none; }
   .md-toolbar-tools .fill-height {
